# Anything2Markdown

./: .dockerignore  .env.example  .gitignore  CREDITS.md  Dockerfile  NOTICE  README.md  README_en.md  pyproject.toml
src/anything2markdown/: api_server.py  cli.py  config.py  mcp_server.py  pipeline.py  router.py  webui.py
src/anything2markdown/_internal/: __init__.py  config.py  exceptions.py  logging_setup.py  retry.py
src/anything2markdown/parsers/: __init__.py  base.py  manner_ocr_parser.py  mineru_parser.py  paddleocr_doc_parser.py  paddleocr_text_parser.py  paddleocr_vl_parser.py  tabular_parser.py
src/anything2markdown/schemas/: result.py
src/anything2markdown/utils/: file_utils.py  html_to_md.py  logging_setup.py  ocr_config.py  pdf_probe.py  retry.py
tests/: test_anything2markdown_routing.py
